add Reset function
add Reset function

--- a/html/additive.html
+++ b/html/additive.html
@@ -25,7 +25,7 @@
 			<span></span>
 		</div>
 
-		<div class="start">Start</div>
+		<div class="start">Reset</div>
 		<div class="menu-button">MENU</div>
 		</div>
 		<div class="plumbing">
